# QML_ExportCppModels

./: CMakeLists.txt  CMakeUserPresets.json  Main.qml  Pages.qml  Tabbar.qml  conanfile.txt  main.cpp
pages/: PageOne.qml  PageTwo.qml
pages/pageone/: GitUserDelegate.qml  InputGitUser.qml  ListGitUser.qml
ui/: gituser.cpp  gituser.h  gitusermodel.cpp  gitusermodel.h  uimanager.cpp  uimanager.h
